# msc-pygeoapi

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  msc-pygeoapi-config.yml  msc-pygeoapi-openapi.yml  msc-pygeoapi.conf  msc-pygeoapi.env  msc-pygeoapi.sh  msc-pygeoapi.wsgi  pyproject.toml  requirements-oracle.txt  requirements.txt  setup.py
.github/workflows/: flake8.yml  main.yml
debian/: changelog  conffiles  control  copyright  msc-pygeoapi.cron.d  msc-pygeoapi.install  postinst  rules
deploy/: msc-pygeoapi-config.yml  msc-pygeoapi-openapi.yml
deploy/default/: msc-pygeoapi-config.yml  msc-pygeoapi-openapi.yml  msc-pygeoapi.conf  msc-pygeoapi.wsgi  robots.txt
deploy/nightly/: deploy-nightly-docker.sh  deploy-nightly.sh  msc-pygeoapi-config-nightly.yml  msc-pygeoapi-config.yml  msc-pygeoapi.conf  msc-pygeoapi.wsgi
docker/: README.md  default.env  docker-compose.override.yml  docker-compose.yml  entrypoint.sh
loaders/: es_loader_ahccd_cmip5.py  es_loader_hydat.py  es_loader_msc_climate_archive.py
locale/: messages.pot
msc_pygeoapi/: __init__.py  cli_options.py  env.py  event.py  log.py  plugin.py  util.py
msc_pygeoapi/connector/: __init__.py  base.py  elasticsearch_.py
msc_pygeoapi/event/: __init__.py  event_plugin.py  file_.py  message.py
msc_pygeoapi/handler/: __init__.py  base.py  core.py
msc_pygeoapi/loader/: __init__.py  ahccd.py  ahccd_cmip5.py  alerts_realtime.py  alerts_realtime_dev.py  aqhi_realtime.py  aqhi_stations.py  base.py  (+26 more)
tests/: conftest.py  run_tests.py  test_aqhi_realtime.py  test_hydat.py  test_hydrometric_realtime.py  test_integration.py  test_openapi_document.py  test_raster_drill.py  test_swob_realtime.py  util.py
(+141 files in other folders)
