[project]
name = "msc-pygeoapi"
version = "0.17.0"
description = "MSC GeoMet pygeoapi server configuration and utilities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Tom Kralidis", email = "tom.kralidis@ec.gc.ca" }]
maintainers = [{ name = "Tom Kralidis", email = "tom.kralidis@ec.gc.ca" }]
keywords = ["msc", "geospatial", "pygeoapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click",
    "dask",
    "elasticsearch>=8,<9",
    "fiona",
    "fsspec",
    "lxml",
    "netcdf4",
    "pandas<3",
    "parse",
    "pygeometa",
    "pyproj<=3.6.1",
    "python-slugify",
    "pyyaml",
    "rasterio<1.4",
    "requests",
    "sqlalchemy",
    "xarray<2025.0.0",
]

[project.optional-dependencies]
oracle = ["cx-oracle"]

[project.scripts]
msc-pygeoapi = "msc_pygeoapi:cli"

[project.urls]
Homepage = "https://github.com/ECCC-MSC/msc-pygeoapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["msc_pygeoapi"]

[dependency-groups]
dev = [
    "flake8",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
